@@ -1,5 +1,12 @@
 2007-04-27  Ulrich Drepper  <drepper@redhat.com>
 
+	[BZ #4342]
+	* stdio-common/vfscanf.c (_IO_vfscanf_internal): Allow
+	hexa-decimal floats without exponent.
+	* stdio-common/tstscanf.c (main): Adjust Test 8 test for success.
+
+2007-04-27  Ulrich Drepper  <drepper@redhat.com>
+
 	[BZ #3213]
 	* locale/C-translit.h.in: Add entry for U2044.
 
